<resources>
    <string name="app_name">Swash Apps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="country_prompt">Choose a Country</string>
    <string name="form1">Please select whether you are filling up the form as a company or as an individual</string>
    <string name="individual">Individual</string>
    <string name="company">Company</string>
    <string name="personal_Information">Personal Information</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up"><u>Create Profile !!</u></string>
    <string name="list_row_head">#Heading -- kranti </string>
    <!-- Facebook app id setting-->
    <string name="facebook_app_id">9402315327300</string>
    <string name="list_row_no">#ID Number </string>
    <string name="list_row_date">#4th Feb, 2016</string>
    <string name="list_row_subtitle">#Text messages here</string>
    <string name="list_row_views">#60 views</string>
    <string name="list_row_likes">#60 likes</string>
    <string name="list_row_comments">#60 comments</string>
    <string name="demo_thoughts">..............</string>
    <string name="demo_manifesto">Minimum Guarentee in every locality: It is more than a promise, It is a Guarentee</string>
    <string name="titlee_forgot">Enter your mobile number below and you will get the OTP.</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="ministry"><b>Test n Try: </b></string>
    <string name="constituency"><b>Constituency: </b></string>


    <string name="title_activity_enquiry">Job Openings</string>
    <string name="title_activity_enquiry_detail">Job Post</string>

    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="country_name">Nigeria</string>

    <array name="state_arrays">
        <item>Delhi</item>
        <item>Gujurat</item>
        <item>Karnataka</item>
        <item>Maharastra</item>
        <item>Odisha</item>
        <item>Rajasthan</item>
        <item>Tamilnadu</item>
        <item>West Bengal</item>

    </array>
    <array name="city_arrays">
        <item>Bhubaneswar</item>
        <item>Cuttack</item>
        <item>Berhampur</item>
        <item>Khurda</item>
    </array>
    <array name="company_type">
        <item>Select Company Type</item>
        <item>Private Limited</item>
    </array>

    <array name="location_type">
        <item>Select Address Type</item>
        <item>Shipping Address</item>
        <item>Mailing Address</item>
        <item>Home Address</item>
        <item>Office Address</item>
    </array>
    <array name="phone_type">
        <item>Select Phone Type</item>
        <item>Cellular</item>
        <item>Home Phone</item>
        <item>Office Phone</item>
        <item>Others</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <dimen name="dots_height">30dp</dimen>
    <dimen name="dots_margin_bottom">20dp</dimen>
</resources>
