<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_form_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swashconvergence.apps.user.FormMainActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:contentInsetLeft="0dp"
        app:elevation="6dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Application Form"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:padding="2dp"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>
    <ScrollView
android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/banner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical|right"
        android:orientation="horizontal"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        >
        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            custom:pager_animation="Accordion"
            custom:auto_cycle="true"
            custom:indicator_visibility="visible"
            custom:pager_animation_span="1100"
            android:layout_height="200dp"/>

        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            custom:selected_color="@color/colorPrimary"
            custom:unselected_color="@color/white"
            custom:shape="oval"
            custom:selected_padding_left="5dp"
            custom:selected_padding_right="5dp"
            custom:unselected_padding_left="5dp"
            custom:unselected_padding_right="5dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            custom:selected_width="6dp"
            custom:selected_height="6dp"
            custom:unselected_width="6dp"
            custom:unselected_height="6dp"
            android:layout_marginBottom="20dp"
            />
        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator2"
            style="@style/AndroidImageSlider_Corner_Oval_Orange"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
    android:id="@+id/text"
        android:textSize="16dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/form1"
    android:layout_marginTop="50dp"
    android:layout_centerHorizontal="true"/>

    <RadioGroup
    android:layout_gravity="center"
    android:layout_marginTop="50dp"
    android:id="@+id/radioCatagory"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RadioButton
    android:textColor="@color/dark_grey"
    android:layout_marginRight="40dp"
    android:id="@+id/radioIndividual"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/individual"
    android:drawableLeft="@drawable/profile"
        android:drawablePadding="3dp"
        android:textSize="16dp"
      />

    <RadioButton
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/company_icon"
        android:drawablePadding="3dp"
        android:textSize="16dp"
    android:textColor="@color/dark_grey"
    android:id="@+id/radioCompany"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/company"
     />

    </RadioGroup>
<android.support.v7.widget.AppCompatButton
    android:layout_marginTop="40dp"
    android:background="@drawable/mybutton"
    android:id="@+id/btnSubmit"
    android:layout_width="match_parent"
    android:layout_gravity="end"
    android:textColor="@color/white"
    android:fontFamily="sans-serif"
    android:layout_height="wrap_content"
    android:text="Continue"
    />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
