<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.swashconvergence.apps.user.EventzDetailActivity"
    tools:showIn="@layout/activity_eventz_detail">

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/android:progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="visible" />

    <ScrollView
        android:id="@+id/content_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/events_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="san-serif"
                android:padding="8dp"
                android:text="@string/list_row_head"
                android:textSize="@dimen/text_head"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/events_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="san-serif"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/list_row_date"
                android:textSize="@dimen/text_content"
                android:textStyle="normal" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/grey">

                <ImageView
                    android:id="@+id/row_item_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/events_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="san-serif"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:text="@string/list_row_subtitle"
                android:textSize="@dimen/text_content"
                android:textStyle="normal" />

            <com.kenplayschool.app_widget.NonScrollListView
                android:id="@+id/highlight_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:listSelector="@android:color/transparent" />


            <!--  <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="8dp"
                  android:background="@drawable/cyan_tag"
                  android:padding="16dp">

                  <com.joanzapata.iconify.widget.IconTextView
                      android:id="@+id/highlight_two"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:fontFamily="san-serif"
                      android:gravity="center"
                      android:text="{ic-starting-quote} Third Front In Mind, Naveen Demands Special Force for Odisha {ic-ending-quote}"
                      android:textColor="@color/color_white"
                      android:textStyle="italic" />
              </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp">

                <!--<android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_item_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="san-serif"
                    android:text="@string/list_row_views"
                    android:textSize="@dimen/text_small"
                    android:textStyle="normal" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_item_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="san-serif"
                    android:paddingLeft="8dp"
                    android:text="@string/list_row_likes"
                    android:textSize="@dimen/text_small"
                    android:textStyle="normal" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/row_item_comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="san-serif"
                    android:paddingLeft="8dp"
                    android:text="@string/list_row_comments"
                    android:textSize="@dimen/text_small"
                    android:textStyle="normal" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:orientation="horizontal">

                    <!--<com.joanzapata.iconify.widget.IconButton
                        android:id="@+id/like"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="san-serif"
                        android:gravity="center"
                        android:text="{ic-like}"
                        android:textColor="@color/text_selector"
                        android:textSize="16sp" />-->

                    <!--<com.joanzapata.iconify.widget.IconButton
                        android:id="@+id/share"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="8dp"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:text="{ic-share}"
                        android:textColor="@color/text_selector"
                        android:textSize="16sp" /> -->
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="8dp"-->
                <!--android:gravity="start"-->
                <!--android:orientation="horizontal">-->

                <!--<ImageView-->
                    <!--android:id="@+id/profile_pic"-->
                    <!--android:layout_width="50dp"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:layout_marginTop="9dp"-->
                    <!--android:background="@color/light_grey"-->
                    <!--android:scaleType="fitXY" />-->

                <!--<android.support.v7.widget.AppCompatEditText-->
                    <!--android:id="@+id/edit_comments"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="80dp"-->
                    <!--android:layout_marginLeft="8dp"-->
                    <!--android:layout_marginTop="8dp"-->
                    <!--android:background="@drawable/text_box"-->
                    <!--android:gravity="start"-->
                    <!--android:hint="Post your comment.."-->
                    <!--android:inputType="textMultiLine"-->
                    <!--android:lines="7"-->
                    <!--android:maxLength="240"-->
                    <!--android:padding="5dp"-->
                    <!--android:scrollbars="vertical"-->
                    <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->
            <!--</LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end">

                <android.support.v4.widget.ContentLoadingProgressBar
                    android:id="@+id/post_progress"
                    style="?android:attr/android:progressBarStyleSmallTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:paddingRight="16dp"
                    android:visibility="gone" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="san-serif"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="Post"
                    android:textColor="@color/color_white" />
            </RelativeLayout>-->
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
